[migrate] docs: update CLAUDE.md decision log and grading table
Add smoke-test runtime fix decisions (CXF 4.1.1, -parameters flag,
Weld CDI, HttpServlet rewrite, context path fix, messages.properties).
Fill grading table — all 13 landmines CAUGHT.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>